Add automatic module name, to allow users to limit native access (#77)